--- a/WalletWasabi.Fluent/Controls/PrivacyContentControl.axaml
+++ b/WalletWasabi.Fluent/Controls/PrivacyContentControl.axaml
@@ -1,6 +1,7 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:WalletWasabi.Fluent.Controls">
+        xmlns:controls="using:WalletWasabi.Fluent.Controls"
+        xmlns:conv="using:WalletWasabi.Fluent.Converters">
   <Design.PreviewWith>
     <controls:PrivacyContentControl />
   </Design.PreviewWith>
@@ -11,7 +12,6 @@
         <Panel>
 
           <ContentPresenter Name="PART_Content"
-                            IsVisible="{Binding IsContentRevealed^, RelativeSource={RelativeSource Mode=TemplatedParent}}"
                             ContentTemplate="{TemplateBinding ContentTemplate}"
                             Content="{TemplateBinding Content}"
                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
@@ -30,6 +30,10 @@
         </Panel>
       </ControlTemplate>
     </Setter>
+  </Style>
+
+  <Style Selector="controls|PrivacyContentControl">
+    <Setter Property="VerticalContentAlignment" Value="Center" />
   </Style>
 
   <Style Selector="controls|PrivacyContentControl /template/ Viewbox#PART_Icon">
@@ -58,5 +62,17 @@
   </Style>
   <Style Selector="controls|PrivacyContentControl[PrivacyReplacementMode=Text] /template/ Viewbox#PART_Icon">
     <Setter Property="IsVisible" Value="False" />
+  </Style>
+
+  <!-- UseOpacity = true -->
+  <Style Selector="controls|PrivacyContentControl[UseOpacity=True] /template/ ContentPresenter#PART_Content">
+    <Setter Property="Opacity" Value="{Binding IsContentRevealed^, RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static conv:BoolOpacityConverters.BoolToOpacity}}" />
+    <Setter Property="IsEnabled" Value="{Binding IsContentRevealed^, RelativeSource={RelativeSource TemplatedParent}}" />
+    <Setter Property="IsHitTestVisible" Value="{Binding IsContentRevealed^, RelativeSource={RelativeSource TemplatedParent}}" />
+  </Style>
+
+  <!-- UseOpacity = false -->
+  <Style Selector="controls|PrivacyContentControl[UseOpacity=False] /template/ ContentPresenter#PART_Content">
+    <Setter Property="IsVisible" Value="{Binding IsContentRevealed^, RelativeSource={RelativeSource Mode=TemplatedParent}}" />
   </Style>
 </Styles>
