--- a/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
@@ -160,7 +160,7 @@
                   Non-custodial
                 </TextBlock>
                 <TextBlock Classes="text">
-                  Only you are in full control of your money, nobody can steal it from you.
+                  You are in full control, nobody can steal from you.
                 </TextBlock>
                 <TextBlock Classes="title2">
                   Private by default
