--- a/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
@@ -194,7 +194,7 @@
                 Open Source
               </TextBlock>
               <TextBlock Classes="text">
-                You can verify exactly what’s going on under the hood and help us improve.
+                     Verify what’s going on and help us improve.
               </TextBlock>
             </StackPanel>
 
