--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -3,8 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-             xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-             xmlns:iac="clr-namespace:Avalonia.Xaml.Interactions.Custom;assembly=Avalonia.Xaml.Interactions"
              xmlns:c="using:WalletWasabi.Fluent.Controls"
              xmlns:history="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.History"
              xmlns:historyItems="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.History.HistoryItems"
@@ -238,14 +236,12 @@
           <Setter Property="IsVisible" Value="False" />
         </Style>
 
-        <Style Selector="TreeDataGridRow">
+        <Style Selector="TreeDataGridRow" x:CompileBindings="True" x:DataType="historyItems:HistoryItemViewModelBase">
           <Setter Property="(i:Interaction.Behaviors)">
             <i:BehaviorCollectionTemplate>
               <i:BehaviorCollection>
                 <behaviors:HistoryItemTypeClassBehavior />
-                <iac:RoutedEventTriggerBehavior RoutingStrategies="Bubble, Tunnel" RoutedEvent="{x:Static InputElement.DoubleTappedEvent}" >
-                  <ia:InvokeCommandAction Command="{Binding ShowDetailsCommand}" x:DataType="historyItems:HistoryItemViewModelBase"/>
-                </iac:RoutedEventTriggerBehavior>
+                <behaviors:ExecuteCommandOnDoubleTapped Command="{Binding ShowDetailsCommand}"/>
               </i:BehaviorCollection>
             </i:BehaviorCollectionTemplate>
           </Setter>
