--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -12,18 +12,9 @@
 
   <c:TileControl Title="PRIVACY PROGRESS" IsBottomContentVisible="{Binding HasPrivateBalance}">
 
-    <c:TileControl.Styles>
-      <Style Selector="DockPanel.bottomAligned">
-        <Setter Property="VerticalAlignment" Value="Bottom"/>
-      </Style>
-      <Style Selector="DockPanel.centerAligned">
-        <Setter Property="VerticalAlignment" Value="Center"/>
-      </Style>
-    </c:TileControl.Styles>
-
-    <DockPanel Classes.bottomAligned="{Binding HasPrivateBalance}" Classes.centerAligned="{Binding !HasPrivateBalance}">
-      <views:PrivacyBar Margin="0 10 0 0" />
-      <StackPanel Margin="0 10 0 0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6">
+    <DockPanel>
+      <views:PrivacyBar DockPanel.Dock="Bottom" />
+      <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6">
         <Button Command="{Binding ShowDetailsCommand}" Classes="plain"
                 ToolTip.Tip="Show Details" VerticalAlignment="Center" HorizontalAlignment="Center"
                 Height="36" Width="36">
